07/18 casos RunCodes funcionando!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "insertinto.h": "c",
         "stdlib.h": "c",
-        "createtable.h": "c"
+        "createtable.h": "c",
+        "mensagenserro.h": "c"
     }
 }
